k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: default
  labels:
    app: heimdall
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: heimdall
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall-headless
  namespace: default
  labels:
    app: heimdall
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: heimdall
